# nicewebrlAblations

./: CLAUDE.md
ablation1/: ablation1nicejax.py
ablation1NiceWebRL/: dataframe.py  logging.py  nicejax.py  run_experiment.py  utils.py
ablation2/: ablation2stages.py
ablation2NiceWebRL/: basics.js  experiment.py  run_experiment.py
ablation3/: ablation3nicejax.py
ablation3NiceWebRL/: __init__.py  nicejax.py
ablation4NiceWebRL/: container.py  nicejax.py  stages.py
crafter/: Dockerfile  config.py  experiment_structure.py  fly.toml  pyproject.toml  retrieve_data.py  web_app.py  web_app_assistant.py
currentNiceWebRL/: __init__.py  basics.js  container.py  dataframe.py  experiment.py  logging.py  nicejax.py  run_experiment.py  stages.py  utils.py
xlandminigrid/: Dockerfile  config.py  experiment_structure.py  pyproject.toml  requirements.txt  upload_google_data.py  web_app.py  web_app_assistant.py
